# banking-app

./: .dockerignore  .env.example  .env.test  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml
app/: main.py
app/api/: router.py
app/api/routes/: accounts.py  customers.py  health.py  transfers.py
app/core/: config.py  logging.py  security.py
app/db/: session.py
app/models/: __init__.py  account.py  customer.py  transfer.py
app/repositories/: account_repo.py  customer_repo.py  transfer_repo.py
app/schemas/: account.py  common.py  customer.py  health.py  transfer.py
app/scripts/: init_db.py  seed_customers.py
app/services/: banking.py
docs/: production-readiness.md
tests/: conftest.py  test_accounts.py  test_concurrency.py  test_customers.py  test_health.py  test_transfers.py
workflows/: ci.yml
